# rf-platform

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  copy-staged.bat  copy-staged.sh  docker-compose.yml  gcmsg.bat
.claude/: launch.json  settings.json  settings.local.json
.github/workflows/: agent-ci.yml  pr-lint.yml  release-agent.yml  release-server.yml  server-ci.yml  web-ci.yml
agent/: README.md  pyproject.toml  rf-agent.toml
agent/scripts/: diag_rtlsdr.py
agent/src/agent/: __init__.py  __main__.py  cli.py  doctor.py  setup_cmd.py
agent/src/agent/app/: __init__.py  factories.py  runner.py
agent/src/agent/config/: __init__.py  errors.py  loader.py
agent/src/agent/domain/: __init__.py
agent/src/agent/processing/: __init__.py  fft_pipeline.py  parse_iq.py  processor.py
agent/src/agent/protocol/: __init__.py
agent/src/agent/session/: __init__.py  bandwidth.py
agent/src/agent/source/: base.py  rtl_sdr_source.py  sigmf.py  simulator.py  wav.py
agent/src/agent/telemetry/: __init__.py  loop.py  metrics.py  stage_timing.py
agent/src/agent/tests/: conftest.py
agent/src/agent/tests/unit/config/: test_agent_config.py
agent/src/agent/tests/unit/processing/: test_fft_pipeline.py  test_iq_parser.py  test_processor.py
agent/src/agent/tests/unit/protocol/: test_codec.py
agent/src/agent/tests/unit/session/: test_session_manager.py
agent/src/agent/tests/unit/source/: test_sigmf_source.py
agent/src/agent/transport/: __init__.py  transport.py
agent/src/agent/utils/: power.py
agent/src/tests/: conftest.py
agent/src/tests/bench/: test_wire_encoding_bench.py
agent/src/tests/fixtures/LTE_uplink_847MHz_2022-01-30_30720ksps_fix/: LTE_uplink_847MHz_2022-01-30_30720ksps.sigmf-meta
agent/src/tests/integration/: conftest.py  test_fake_server.py
agent/src/tests/integration/fixtures/: agent_builders.py  fake_server.py  message_helpers.py
agent/src/tests/integration/session/: test_handshake_flow.py  test_runtime_recovery.py  test_streaming_flow.py
agent/src/tests/unit/app/: test_factories.py  test_runner.py
agent/src/tests/unit/cli/: test_cli.py  test_doctor.py  test_setup_cmd.py
agent/src/tests/unit/config/: test_agent_config.py  test_config_loader.py
agent/src/tests/unit/processing/: test_fft_pipeline.py  test_iq_parser.py  test_iq_processor.py
agent/src/tests/unit/protocol/: test_codec.py
agent/src/tests/unit/session/: test_bandwidth.py  test_session_config_request.py  test_session_manager.py
agent/src/tests/unit/source/: test_rtl_sdr_apply_rf_update.py  test_rtl_sdr_source.py  test_sigmf_source.py  test_simulator_apply_rf_update.py  test_wav_no_retune.py  test_wav_source.py
agent/src/tests/unit/telemetry/: test_metrics_collector.py  test_stage_timing.py  test_telemetry.py
agent/src/tests/unit/transport/: test_transport.py
docs/: agent_mvp_status.md  agent_wire_v0_4_plan.md  project_overview.md  server_api_contract.md  server_mvp_status.md  web_mvp_claude_plan.md  web_mvp_plan.md  web_mvp_status.md  web_production_notes.md
docs/archive/: server_mvp_sqlite_plan.md
docs/benchmarks/: binary_ws_encoding_benchmark.md  fft_size_benchmark_umts.md
docs/protocol/: agent_server_contract_v0.3.md  iq_input_schema.md
docs/tests/: agent_implementation_review.md  agent_next_tests.md  agent_project_state.md  audit_report.md  session_plan.md
protocol/: agent_server_contract_v0_4.md  agent_server_contract_v0_5.md
scripts/: attach-rtlsdr.sh  fake_server.py  gcmsg.ps1  gcmsg.sh  reduce_sigmf_file_size.py  reduce_wav_file_size.py  run_demo.py  run_sim.py  setup-linux.sh  setup-macos.sh  setup-windows.ps1
server/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
server/src/server/app/: agent_routes.py  api.py  auth_config.py  bootstrap.py  deps.py  http_routes.py  ws_agent.py  ws_viewer.py
server/src/server/auth/: browser_auth.py  google_auth.py  passwords.py
server/src/server/config/: settings.py
server/src/server/protocol/: codec.py
server/src/server/sessions/: models.py  registry.py
server/src/server/storage/: db.py  models.py
server/src/server/storage/repositories/: agent_tokens.py  agents.py  users.py
server/tests/unit/: test_agent_routes.py  test_auth.py  test_bootstrap.py  test_codec.py  test_cors.py  test_db_bootstrap.py  test_e2e.py  test_session_registry.py  test_storage_repositories.py  test_ws_agent.py  test_ws_viewer.py
web/: .env.example  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/sample/: LTE_uplink_847MHz_2022-01-30_30720ksps.sigmf-data
web/src/: main.tsx  vite-env.d.ts  waterfall-canvas-react-shim.d.ts
web/src/api/: agents.ts  (+4 more)
(+24 files in other folders)
