[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rf-agent"
version = "0.4.0b1"
requires-python = ">=3.10"
description = "SDR agent for RF spectrum streaming"
readme = "README.md"
license = { text = "MIT" }
keywords = ["sdr", "rf", "spectrum", "fft", "websocket"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "websockets>=12.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
rf-agent = "agent.cli:main"

[project.optional-dependencies]
sdr = [
    "pyrtlsdr>=0.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
exclude = ["src/tests"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
addopts = "-m 'not bench'"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "bench: marks performance benches (run with '-m bench'; deselected by default)",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["agent"]
mypy_path = "src"

[tool.ruff]
target-version = "py310"
src = ["src", "src/tests"]

[tool.ruff.lint]
select = ["E", "F", "UP"]
