[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rf-server"
version = "0.3.0"
requires-python = ">=3.10"
description = "RF spectrum streaming server"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.2",
    "pydantic>=2.0.0",
    "google-auth>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
tag_format = "server-v{version}"
commit_message = "chore(release): server {version} [skip ci]"
major_on_zero = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
